--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,3 +3,6 @@ $fontRegular: MontserratRegular;
 $fontMedium: MontserratMedium;
 $fontSemiBold: MontserratSemiBold;
 $fontBold: MontserratBold;
+
+$colorOrange: #FC7032;
+$colorGray: #575756;
