--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,100 +1,53 @@
 .btn {
   position: relative;
-  display: inline-block;
-  text-align: center;
-  line-height: 1.2;
-  max-width: 100%;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  z-index: 1;
   color: #fff;
-  background: $colorOrange;
-  box-shadow: none;
   border: 0;
-  border-radius: 0;
-  box-shadow: 0;
-  &:before {
-    content: '';
-    position: absolute;
-    width: 70px;
-    height: 70px;
-    background: red;
-    transition: .3s all ease;
-    top: 0;
-    right:-35px;
-    transform: rotate(45deg);
-    z-index: -2;
-  }
+  background: $colorOrange;
+  border-radius: 0 3px 3px 0;
+  z-index: 2;
 
   &_big {
-    padding: 20px 48px 20px 30px;
-    font-size: 25px;
+    padding: 20px 30px 20px 30px;
+    font-size: 24px;
+
   }
   &_orange {
     color: #fff;
     background: $colorOrange;
-  }
-}
-
-* + .btn, * + .btn-group {
-  margin-top: 32px;
-}
-/*.btn {
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  line-height: 1.2;
-  max-width: 100%;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  z-index: 1;
-  box-shadow: none;
-  border: 0;
-  border-radius: 0;
-  box-shadow: 0;
-  &:after, &:before {
-    content: '';
-    position: absolute;
-    z-index: -1;
-    transition: .3s all ease;
-  }
-  &:after {
-    content: '';
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  &:before {
-    left: 0;
-    top: 0;
-    bottom: 0;
-  }
-  &_big {
-    padding: 20px 48px 20px 30px;
-    font-size: 25px;
-    &:before {
-      right: 35px;
+    height: 100%;
+    &:hover {
+      background: #fff;
+      color: $colorDark;
+      &:after {
+        content: '';
+        border-left-color: #fff;
+      }
     }
-    &:after {
-      width: 0;
-      height: 0;
-      border-style: solid;
-      border-width: 35px 0 35px 35px;
-      border-color: transparent transparent transparent transparent;
-    }
-  }
-  &_orange {
-    color: #fff;
-    &:before {
+    /*&:before {
+      content: '';
+      position: absolute;
+      width: 74px;
+      height: 74px;
       background: $colorOrange;
-    }
+      transition: .3s all ease;
+      top: 0;
+      right: -3px;
+      z-index: -2;
+    }*/
     &:after {
-      border-color: transparent transparent transparent $colorOrange;
+      content: '';
+      position: absolute;
+      border: 37px solid transparent;
+      border-left: 37px solid $colorOrange;
+      transition: .3s all ease;
+      top: 0;
+      right: -73px;
+      z-index: -1;
     }
   }
 }
 
+
 * + .btn, * + .btn-group {
   margin-top: 32px;
-}*/
+}
