--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -1,6 +1,6 @@
 .slider {
   background: #F0EFF0;
-  padding: 40px 0;
+  padding: 40px 0 0 0;
 }
 @media only screen and (max-width : 992px) {
   .slider {
