--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "grid";
 @import "fontAweasome";
 @import "fonts";
+@import "animate";
 
 
 body {
@@ -18,6 +19,7 @@ body {
 @import "slider";
 @import "button";
 @import "catalog";
+@import "popup-form";
 
 @import "footer";
 
