--- a/src/styles/catalog.scss
+++ b/src/styles/catalog.scss
@@ -6,7 +6,7 @@
     text-align: center;
     font-size: 70px;
     margin-bottom: 30px;
-    color: #333;
+    color: $colorGray;
   }
   &__item {
     display: block;
