--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,32 @@ body {
   font-size: 18px;
   color: $colorGray;
 }
+p {
+  margin: 0 0 10px 0;
+}
+.rd-google-map {
+  color: #333;
+}
+.rd-google-map__model {
+  height: 300px;
+}
+.rd-google-map__model img {
+  max-width: none !important;
+}
+@media (min-width: 480px) {
+  .rd-google-map__model {
+    height: 300px;
+  }
+}
+@media (min-width: 768px) {
+  .rd-google-map__model {
+    height: 550px;
+  }
+}
+.rd-google-map__locations {
+  display: none;
+}
+
 
 @import "header";
 @import "rd-navbar";
@@ -20,6 +46,8 @@ body {
 @import "button";
 @import "catalog";
 @import "popup-form";
+@import "content";
+@import "content-form";
 
 @import "footer";
 
