--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,6 +1,7 @@
 .footer {
   background: $colorDark; //url(../images/dark-pattern.jpg); //$colorDark;
   padding: 25px 0;
+  box-shadow: 0 -10px 17px 0 rgba(10, 10, 10, 0.11);
   //font-size: 16px;
   &__email {
     color: #fff;
