--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -27,8 +27,10 @@ footer, header, hgroup, menu, nav, main, time, section {
   display: block;
 }
 
-ol, ul {
+ul, ol {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 blockquote, q {
