--- a/src/styles/popup-form.scss
+++ b/src/styles/popup-form.scss
@@ -1,6 +1,8 @@
 .modal-content {
   padding: 15px;
   background: #F0EFF0;
+  border-radius: 0;
+  border: 0;
   &__btn-close {
 
     & .close {
@@ -11,6 +13,9 @@
       right: -5px;
       color: $colorOrange;
       opacity: 1;
+      &:hover {
+        opacity: .75;
+      }
     }
   }
   &__heading {
@@ -21,26 +26,225 @@
   }
   &__form-wrapper-input {
     margin-bottom: 15px;
+    position: relative;
   }
-  &__form-input, &__form-textarea {
+  &__form-wrapper-textarea {
+    margin-bottom: 15px;
+    position: relative;
+  }
+  &__form-input {
     display: block;
     width: 100%;
     margin: 0;
     -webkit-appearance: none;
     font-size: 15px;
-    padding: 2.5px 18px;
+    padding: 5px 18px;
     color: #777;
     background: #fff;
-    border: 1px solid #fff;
+    border: 0;
     border-radius: 0;
+    &.error {
+      //border-bottom: 2px solid #a94442;
+      &:focus {
+        //border-bottom: 2px solid #a94442;
+        //box-shadow: inset 0 0 5px rgba(#a94442, .8);
+      }
+    }
+  }
+  &__form-textarea {
+    display: block;
+    width: 100%;
+    margin: 0;
+    -webkit-appearance: none;
+    font-size: 15px;
+    padding: 9px 18px;
+    color: #777;
+    background: #fff;
+    border: 0;
+    border-radius: 0;
+    &.error {
+      //border-bottom: 2px solid #a94442;
+
+      &:focus {
+        //border-bottom: 2px solid #a94442;
+        //box-shadow: inset 0 0 5px rgba(#a94442, .8);
+      }
+    }
   }
   &__form-input{
+    transition: .3s all ease;
     height: 41px;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.55);
+    &::-webkit-input-placeholder {
+      color: $colorLightGray;
+    }
+    &::-moz-placeholder {
+      color: $colorLightGray;
+    }
+    &:-ms-input-placeholder {
+      color: $colorLightGray;
+    }
+    &:placeholder-shown {
+      color: $colorLightGray;
+    }
+    &:focus {
+      outline: none;
+      box-shadow: none;
+    }
   }
   &__form-textarea{
+    transition: .3s all ease;
     height: 150px;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.55);
+    &::-webkit-input-placeholder {
+      color: $colorLightGray;
+    }
+    &::-moz-placeholder {
+      color: $colorLightGray;
+    }
+    &:-ms-input-placeholder {
+      color: $colorLightGray;
+    }
+    &:placeholder-shown {
+      color: $colorLightGray;
+    }
+    &:focus {
+      outline: none;
+      box-shadow: none;
+    }
   }
   &__form-wrapper {
     margin: 0 15px;
   }
+  &__wrapper-checkbox {
+    position: relative;
+    margin: 15px 0 30px 0;
+    text-align: left;
+    & a {
+      color: $colorGray;
+      transition: .3s all ease;
+      &:hover {
+        border-color: lighten($colorOrange, 20%);
+      }
+    }
+  }
+  &__form-wrapper-submit {
+    margin: 15px 0;
+    text-align: center;
+  }
+  &__btn {
+    &:disabled {
+      //background: #a1a1a1;
+      &:hover {
+        //background: lighten(#a1a1a1, 10%);
+      }
+    }
+  }
+
+  & label.error {
+    position: absolute;
+    right: 15px;
+    top: 5px;
+    font-size: 11px;
+    color: #a94442;;
+  }
+  &__form-tanks {
+    text-align: center;
+    color: $colorOrange;
+    padding: 50px 0;
+    border: 1px solid $colorOrange;
+    margin: 30px;
+  }
+}
+
+.modal-content input[type="checkbox"] + label {
+  position: relative;
+  display: block;
+  width: 100%;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: pointer;
+  color: $colorLightGray;
+  padding-left: 45px;
+  font-size: 14px;
+}
+.modal-content input[type="checkbox"] + label:before {
+  content: '';
+  position: absolute;
+  box-sizing: border-box;
+  width: 30px;
+  height: 30px;
+  border: 2px solid $colorLightGray;
+  //border-radius: 100%;
+  transform: translate(-50%, -50%);
+  transition: all ease-out 200ms;
+  left: 15px;
+  top: 50%;
+  //transform: translateY(-50%);
+  color: #333;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: pointer;
+}
+
+.modal-content input[type="checkbox"] + label:after {
+  content: '';
+  position: absolute;
+  width: 30px;
+  height: 13px;
+  border-bottom: 2px solid $colorOrange;
+  border-left: 2px solid $colorOrange;
+  left: 15px;
+  top: 50%;
+  margin-top: -7px;
+  transform-origin: bottom left;
+  transform: rotate(-45deg);
+  opacity: 0;
+  transition: all ease-out 200ms;
+}
+
+.modal-content input[type="checkbox"]:checked + label:before {
+  border: 2px solid $colorOrange;
+}
+.modal-content input[type="checkbox"]:checked + label{
+  color: $colorOrange;
+}
+
+.modal-content input[type="checkbox"]:checked + label:after {
+  opacity: 1;
+  width: 36px;
+}
+
+#chk {
+  display: none;
+}
+
+
+
+.upload-file {
+  color: $colorOrange;
+  margin: 5px 0 10px 0;
+  display: inline-block;
+  cursor: pointer;
+
+  transition: all 0.3s;
+  & span {
+    border-bottom: 1px dotted $colorOrange;
+  }
+
+}
+.upload-file:hover {
+  color: lighten($colorOrange, 10%);
+}
+.hide-type-file {
+  position: absolute;
+  overflow: hidden;
+  z-index: -1;
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
 }
