--- a/src/styles/catalog.scss
+++ b/src/styles/catalog.scss
@@ -8,6 +8,9 @@
     margin-bottom: 30px;
     color: $colorGray;
   }
+  &__btn {
+    text-align: center;
+  }
   &__item {
     display: block;
     position: relative;
