--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -3,6 +3,13 @@
   padding: 40px 0;
   line-height: 1.4;
   min-height: calc(100vh - 349px);
+  &__price {
+    color: $colorOrange;
+    font-family: $fontBold;
+    font-size: 32px;
+    padding-bottom: 11px;
+    border-bottom: 1px solid #333;
+  }
   &.contacts {
     min-height: 100%;
   }
@@ -160,5 +167,38 @@
     & th {
       text-align: center;
     }
+  }
+}
+.param-list {
+  margin: 20px 0 20px 0;
+  & .param-list__item {
+    position: relative;
+    padding: 0 0 0 0px;
+    margin: 20px 0 0;
+    &:before {
+      content: "";
+      position: absolute;
+      left: 17px;
+      top: 6px;
+      width: 0px;
+      height: 0px;
+      background: none;
+      //border-radius: 50%;
+    }
+  }
+  &__item {
+    display: flex;
+  }
+  &__item-label{
+    font-family: $fontBold;
+  }
+  &__item-holder {
+    flex: 1 0 0;
+    margin-left: 10px;
+    margin-right: 10px;
+    background-image: linear-gradient(to right, #000000 10%, transparent 10%);
+    background-position: 0 1.04em;
+    background-repeat: repeat-x;
+    background-size: 10px 1px;
   }
 }
